--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <link rel="icon" type="icon/x-image" href="./img/favicon.ico" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta name="description" content="Website Development Agency. Helping businesses strengthen their online presence with modern technology.">
-    <title>WB WebDev - Website Development Agency</title>
+    <title>WB WebDev | Website Development Agency</title>
   </head>
   <body>
     <div id="root"></div>
