--- a/index.html
+++ b/index.html
@@ -12,5 +12,14 @@
   <body>
     <div id="root"></div>
     
+    <!-- Google tag (gtag.js) -->
+    <script async src="https://www.googletagmanager.com/gtag/js?id=G-CGS0WWWJEQ"></script>
+    <script>
+      window.dataLayer = window.dataLayer || [];
+      function gtag(){dataLayer.push(arguments);}
+      gtag('js', new Date());
+
+      gtag('config', 'G-CGS0WWWJEQ');
+    </script>
   </body>
 </html>
