fixing og:image

--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <link rel="icon" type="icon/x-image" href="./img/favicon.ico" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <meta property="og:image" content="/img/logo-banner.png" />
+    <meta property="og:image" content="https://wbwebdev.com/img/logo-banner.png" />
     <meta name="description" content="Website Development Agency. Helping businesses strengthen their online presence with modern technology.">
     <title>WB WebDev | Website Development Agency</title>
     <!-- Meta Pixel Code -->
