--- a/index.html
+++ b/index.html
@@ -4,7 +4,28 @@
     <meta charset="UTF-8" />
     <link rel="icon" type="icon/x-image" href="./img/favicon.ico" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <meta property="og:image" content="https://wbwebdev.com/img/logo-banner.png" />
+    
+  <!-- HTML Meta Tags -->
+  <title>WB WebDev | Website Development Agency</title>
+  <meta name="description" content="Website Development Agency. Helping businesses strengthen their online presence with modern technology.">
+
+  <!-- Facebook Meta Tags -->
+  <meta property="og:url" content="https://wbwebdev.com">
+  <meta property="og:type" content="website">
+  <meta property="og:title" content="WB WebDev | Website Development Agency">
+  <meta property="og:description" content="Website Development Agency. Helping businesses strengthen their online presence with modern technology.">
+  <meta property="og:image" content="https://wbwebdev.com/img/logo-banner-full.png">
+
+  <!-- Twitter Meta Tags -->
+  <meta name="twitter:card" content="summary_large_image">
+  <meta property="twitter:domain" content="wbwebdev.com">
+  <meta property="twitter:url" content="https://wbwebdev.com">
+  <meta name="twitter:title" content="WB WebDev | Website Development Agency">
+  <meta name="twitter:description" content="Website Development Agency. Helping businesses strengthen their online presence with modern technology.">
+  <meta name="twitter:image" content="https://wbwebdev.com/img/logo-banner-full.png">
+
+  <!-- Meta Tags Generated via https://www.opengraph.xyz -->
+        
     <meta name="description" content="Website Development Agency. Helping businesses strengthen their online presence with modern technology.">
     <title>WB WebDev | Website Development Agency</title>
     <!-- Meta Pixel Code -->
