Added Google Ads Tag

--- a/index.html
+++ b/index.html
@@ -42,6 +42,7 @@
   <body>
     <div id="root"></div>
     <script type="module" src="/src/main.tsx"></script>
+    
     <!-- Google tag (gtag.js) -->
     <script async src="https://www.googletagmanager.com/gtag/js?id=G-CGS0WWWJEQ"></script>
     <script>
@@ -51,5 +52,16 @@
 
       gtag('config', 'G-CGS0WWWJEQ');
     </script>
+
+    <!-- Google tag (gtag.js) -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=AW-11351244591">
+</script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
+
+  gtag('config', 'AW-11351244591');
+</script>
   </body>
 </html>
