--- a/index.html
+++ b/index.html
@@ -6,8 +6,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     
   <!-- HTML Meta Tags -->
-  <title>WB WebDev | Website Development Agency</title>
-  <meta name="description" content="Website Development Agency. Helping businesses strengthen their online presence with modern technology.">
+  <title>America's Best Pressure Washing Websites</title>
+  <meta name="description" content="Website Development Agency. Helping Pressure Washing businesses strengthen their online presence with modern technology.">
 
   <!-- Facebook Meta Tags -->
   <meta property="og:url" content="https://wbwebdev.com">
