--- a/index.html
+++ b/index.html
@@ -6,14 +6,14 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     
   <!-- HTML Meta Tags -->
-  <title>America's Best Pressure Washing Websites</title>
-  <meta name="description" content="Website Development Agency. Helping Pressure Washing businesses strengthen their online presence with modern technology.">
+  <title>America's Best Cleaning Websites</title>
+  <meta name="description" content="Website Development Agency. Helping Cleaning businesses strengthen their online presence with modern technology.">
 
   <!-- Facebook Meta Tags -->
   <meta property="og:url" content="https://wbwebdev.com">
   <meta property="og:type" content="website">
   <meta property="og:title" content="WB WebDev | Website Development Agency">
-  <meta property="og:description" content="Website Development Agency. Helping businesses strengthen their online presence with modern technology.">
+  <meta property="og:description" content="Website Development Agency. Helping Cleaning businesses strengthen their online presence with modern technology.">
   <meta property="og:image" content="https://wbwebdev.com/img/logo-banner-full.png">
 
   <!-- Twitter Meta Tags -->
@@ -21,7 +21,7 @@
   <meta property="twitter:domain" content="wbwebdev.com">
   <meta property="twitter:url" content="https://wbwebdev.com">
   <meta name="twitter:title" content="WB WebDev | Website Development Agency">
-  <meta name="twitter:description" content="Website Development Agency. Helping businesses strengthen their online presence with modern technology.">
+  <meta name="twitter:description" content="Website Development Agency. Helping Cleaning businesses strengthen their online presence with modern technology.">
   <meta name="twitter:image" content="https://wbwebdev.com/img/logo-banner-full.png">
 
     <!-- Meta Pixel Code -->
